--- a/quotes/templates/quotes/navbar.html
+++ b/quotes/templates/quotes/navbar.html
@@ -32,10 +32,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:8000/topquotes/">Top Anime Quotes </a>
+        <a class="nav-link" href="https://animequote.pythonanywhere.com/topquotes/">Top Anime Quotes </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://127.0.0.1:8000/allanime/">All Quotes</a>
+        <a class="nav-link" href="https://animequote.pythonanywhere.com/allanime/">All Quotes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Anime List</a>
