Url changed in navbar

--- a/quotes/templates/quotes/navbar.html
+++ b/quotes/templates/quotes/navbar.html
@@ -21,7 +21,7 @@
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="http://127.0.0.1:8000/">Anime Quotes</a>
+  <a class="navbar-brand" href="https://animequote.pythonanywhere.com/">Anime Quotes</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
