--- a/topanime/templates/topanime/top_anime_quotes.html
+++ b/topanime/templates/topanime/top_anime_quotes.html
@@ -4,22 +4,22 @@
 <br />
 
 <div class='row'>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'fmab/fmab1.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">FMAB</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'fmab/fmab2.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">FMAB</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'fmab/fmab5.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">FMAB</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'fmab/fmab4.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">FMAB</p>
@@ -27,22 +27,22 @@
 </div>
 <br /><br />
 <div class='row'>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'deathnote/dn5.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Death Note</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'deathnote/dn2.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Death Note</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'deathnote/dn3.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Death Note</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'deathnote/dn4.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Death Note</p>
