--- a/topanime/templates/topanime/top_anime_quotes.html
+++ b/topanime/templates/topanime/top_anime_quotes.html
@@ -51,22 +51,22 @@
 <br /><br />
 
 <div class='row'>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'hxh/hxh1.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Hunter x Hunter</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'hxh/hxh2.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Hunter x Hunter</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'hxh/hxh3.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Hunter x Hunter</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'hxh/hxh4.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Hunter x Hunter</p>
@@ -77,22 +77,22 @@
 <br />
 
 <div class='row'>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'steinsgate/sn1.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Steins;gate</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'steinsgate/sn2.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Steins;gate</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'steinsgate/sn5.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Steins;gate</p>
 	</div></div>
-	<div class='col-sm-12 col-md-4 col-lg-3 card'>
+	<div class=' col-md-12 col-lg-3 card'>
 	<img src="{%static 'steinsgate/sn4.jpg' %}" class='img-fluid img-thumbnail card-img-top' >
 	<div class="card-body">
 	<p class="lead">Steins;gate</p>
